--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
 body {
   color: #17202A;
   background-color:#FBFCFC;
-  font-family: 'Oxygen', sans-serif;
+  /* font-family: 'Oxygen', sans-serif; */
+   font-family: 'Comfortaa', cursive;
 }
 
 /** HEADER **/
@@ -29,13 +30,19 @@ body {
   border: 1px solid #17202A;
 }
 
+#collapsable-nav {
+  padding: 0px;
+  }
+
 #nav-list {
-  margin-top: 10px;
-}
+  margin: 0px;
+  background-color: #C2C8C8;
+  }
+
 #nav-list li {
   font-size: 25px;
   text-align: center;
-}
+  }
 
 /* END HEADER */
 
